<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nguyenvukhanhuygmail.environmental_protection.AddProblemActivity">

    <ScrollView
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/problem_title"
                android:layout_marginBottom="10dp"
                android:hint="@string/problem_title"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:textSize="18dp"
                android:drawableLeft="@drawable/ic_title_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:minLines="2"
                android:id="@+id/describe_problem"
                android:layout_marginBottom="10dp"
                android:hint="@string/describe_problem"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:inputType="textMultiLine"
                android:textSize="18dp"
                android:drawableLeft="@drawable/ic_short_text_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/place_picker_problem"
                android:layout_marginBottom="10dp"
                android:hint="@string/place_text_field_hint"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:textSize="18dp"
                android:drawableLeft="@drawable/ic_location_on_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/image_picker_problem"
                android:layout_marginBottom="10dp"
                android:hint="@string/AddImage"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:textSize="18dp"
                android:drawableLeft="@drawable/ic_image_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_image_problem"
                android:scrollbars="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

            <Button
                android:textColor="@color/white"
                android:background="@drawable/auth_button"
                android:text="@string/add_problem_button"
                android:layout_marginHorizontal="30dp"
                android:id="@+id/add_problem_button"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>