<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:weightSum="4"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nguyenvukhanhuygmail.environmental_protection.authentication.LoginActivity">

    <LinearLayout
        android:gravity="center"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp" />
    </LinearLayout>

    <ScrollView
        android:layout_marginHorizontal="30dp"
        android:layout_weight="2.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/email_text_field_hint"
                android:drawablePadding="5dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:id="@+id/email_text_field"
                android:textSize="18dp"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:hint="@string/password_text_field_hint"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:inputType="textPassword"
                android:id="@+id/password_text_field"
                android:textSize="18dp"
                android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:textColor="@color/white"
                android:background="@drawable/auth_button"
                android:text="@string/login_button"
                android:layout_marginHorizontal="30dp"
                android:id="@+id/login_button"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:clickable="true"
                android:gravity="center"
                android:textColor="@color/gray"
                android:text="@string/gotoRegister_button"
                android:layout_marginHorizontal="30dp"
                android:id="@+id/gotoRegister_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
